<resources>
    <string name="app_name">.::B-D4Y!::.</string>
    <string name="textoMenuPrincipal"></string>
    <string name="aniversariantes">Aniversariantes</string>
    <string name="presentes">Presentes</string>
    <string name="configuracoes">Configurações</string>
    <string name="Nome">Nome: </string>
    <string name="Data">Data: </string>
    <string name="email">E-mail: </string>
    <string name="preco">Preço:</string>
    <string name="DataAniversario">Data de Aniversário: </string>
    <string name="listaPresentes">Lista de Presentes</string>
    <string name="listaAniversariantes">Lista de Aniversariantes com este presente</string>
    <string name="nenhumPresente">Nenhum presente encontrado.</string>
    <string name="nenhumAniversariante">Nenhum aniversariante encontrado.</string>
    <string name="salvar">Salvar Alterações</string>
    <string name="detalhesAniv">Detalhes Aniversariante</string>
    <string name="detalhesPres">Detalhes Presente</string>
    <string name="cadAniv">Cadastro de Aniversariante</string>
    <string name="cadPres">Cadastro de Presente</string>
    <string name="menuPrincipal">.::B-D4Y::.</string>
    <string name="btnAniversariantes">Menu Aniversariantes</string>
    <string name="btnPresentes">Menu Presentes</string>
    <string name="btnConfiguracoes">Configurações</string>
    <string name="configChkNotificacoes">Receber Notificações de Aniversariantes?</string>
    <string name="textMenuConfig">Deseja receber notificações de Aniversariantes?</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="erroNome">Nome é um campo obrigatório!</string>
    <string name="erroDiaMes">Dia e Mês não podem ficar em branco!</string>
    <string name="salvoSucesso">Cadastrado com sucesso!</string>
    <string name="salvoFalha">Erro ao Cadastrar.</string>
    <string name="alterar">Alterar</string>
    <string name="excluir">Excluir</string>
    <string name="erroData">Insira valores válidos em dia e mês!</string>
    <string name="atualizadoSucesso">Atualizado com Sucesso!</string>
    <string name="atualizadoFalha">Falha ao atualizar!</string>
    <string name="confirmaExcluir">Deseja realmente excluir </string>
    <string name="confirma">Confirmar</string>
    <string name="cancela">Cancelar</string>
    <string name="excluidoSucesso">Excluído com Sucesso!</string>
    <string name="excluidoFalha">Falha na Exclusão!</string>
    <string name="erroCampos">Todos os campos são obrigatórios!</string>
    <string name="erroPreco">O Preço deve ser maior que zero!</string>
    <string name="sucessoAddPresente">Presente adicionado ao Aniversariante!</string>
    <string name="falhaAddPresente">Este presente já existe na lista!</string>
    <string name="presenteExcluidoLista">Presente excluído da lista!</string>
    <string name="confirmaExcluirLista">Deseja excluir este Presente da Lista?</string>
    <string name="altAniv">Alterações Aniversariante</string>
    <string name="altPres">Alterações Presente</string>
    <string name="addPres">Adicionar Presentes à Lista</string>
    <string name="btnAniversariantesMes">Aniversariantes do Mês</string>
    <string name="configEtTempoNotificacoes">Tempo (em minutos) entre cada notificação</string>
    <string name="confirmarAcao">Confirmar Ação</string>
    <string name="aniversariantesMes">Aniversariantes do Mês</string>
    <string name="configChkAtrasados">Mostar na lista de aniversariantes do mês e notificações datas de aniversário que já passaram?</string>
</resources>
