<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fatec.jrss.projetofinal.atividades.AniversarianteAlteraExclui">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nome"
        android:textSize="24dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtAltExcNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DataAniversario"
        android:textSize="24dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dia: "
            android:textSize="24dp"/>
        <EditText
            android:id="@+id/txtAltExcDia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:textAlignment="center"
            android:inputType="number"
            android:layout_weight="0.5" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mês: "
            android:textSize="24dp"/>
        <EditText
            android:id="@+id/txtAltExcMes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:textAlignment="center"
            android:inputType="number"
            android:layout_weight="0.5"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="24dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtAltExcEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAlterar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:text="@string/alterar" />

        <Button
            android:id="@+id/btnExcluir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/excluir" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/btnHome"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="start"
            android:background="@drawable/ic_menu_home"
            android:layout_weight="0.1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"/>
        <Button
            android:id="@+id/btnAniversarianteDetalhes"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_menu_aniversariante"
            android:layout_weight="0.1"/>
    </LinearLayout>
</LinearLayout>
